# crawler-bibliografia-pdf

./: .gitignore  BUILD.md  BUILD_AUTO.md  README.md  WINDOWS_BUILD.md  app.py  build.sh  build_android.sh  build_linux.sh  build_linux_auto.sh  build_web.sh  build_windows.sh  build_windows_auto.ps1  exemplo_lista.txt  main.py  pyproject.toml  start.sh
