[project]
name = "crawler"
version = "0.1.0"
description = "Sistema de busca e download de bibliografia em PDF com interface gráfica"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "playwright-stealth",
    "fake-useragent",
    "pymupdf>=1.26.7",
    "flet>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "watchdog>=3.0.0",
]
